moduł commands.. prawie