@@ -17,53 +17,49 @@
 
 package pl.fratik.commands.zabawa;
 
-import net.dv8tion.jda.api.Permission;
+import net.dv8tion.jda.api.entities.emoji.CustomEmoji;
 import org.jetbrains.annotations.NotNull;
 import org.json.JSONObject;
 import pl.fratik.core.Ustawienia;
+import pl.fratik.core.command.NewCommand;
+import pl.fratik.core.command.NewCommandContext;
 import pl.fratik.core.util.NetworkUtil;
 
 import java.net.URLEncoder;
-import java.util.LinkedHashMap;
+import java.nio.charset.StandardCharsets;
 
-public class BigemojiCommand extends Command {
+public class BigemojiCommand extends NewCommand {
     public BigemojiCommand() {
         name = "bigemoji";
-        category = CommandCategory.FUN;
-        LinkedHashMap<String, String> hmap = new LinkedHashMap<>();
-        hmap.put("emotka", "emote");
-        hmap.put("[...]", "emote");
-        uzycie = new Uzycie(hmap, new boolean[] {true, false});
-        uzycieDelim = " ";
-        aliases = new String[] {"bigmoji"};
-        permissions.add(Permission.MESSAGE_ATTACH_FILES);
-        allowPermLevelChange = false;
+        usage = "<emotki:string>";
         allowInDMs = true;
     }
 
     @Override
-    public boolean execute(@NotNull CommandContext context) {
+    public void execute(@NotNull NewCommandContext context) {
+        if (context.getArguments().get("emotka").getMentions().getCustomEmojis().isEmpty()) {
+            context.replyEphemeral(context.getTranslated("bigemoji.no.emojis"));
+            return;
+        }
+        context.deferAsync(false);
         try {
             StringBuilder sb = new StringBuilder(Ustawienia.instance.apiUrls.get("image-server"));
             sb.append("/api/polacz?");
-            for (Object obj : context.getArgs()) {
-                Emoji emotka = (Emoji) obj;
+            for (CustomEmoji emotka : context.getArguments().get("emotka").getMentions().getCustomEmojis()) {
                 sb.append("zdjecie[]=");
-                sb.append(URLEncoder.encode(emotka.getImageUrl(), "UTF-8"));
+                sb.append(URLEncoder.encode(emotka.getImageUrl(), StandardCharsets.UTF_8));
                 sb.append("&");
             }
             sb.setLength(sb.length() - 1);
             JSONObject zdjecie = NetworkUtil.getJson(sb.toString(), Ustawienia.instance.apiKeys.get("image-server"));
             if (zdjecie == null || !zdjecie.getBoolean("success")) {
-                context.reply(context.getTranslated("image.server.fail"));
-                return false;
+                context.sendMessage(context.getTranslated("image.server.fail"));
+                return;
             }
             byte[] img = NetworkUtil.getBytesFromBufferArray(zdjecie.getJSONObject("image").getJSONArray("data"));
-            context.getMessageChannel().sendFile(img, "bigemoji.png").reference(context.getMessage()).queue();
-            return true;
+            context.sendMessage("bigemoji.png", img);
         } catch (Exception e) {
-            context.reply(context.getTranslated("image.server.fail"));
-            return false;
+            context.sendMessage(context.getTranslated("image.server.fail"));
         }
     }
 }
